# learn-rust-api

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  README.th.md  docker-compose.yml
.github/workflows/: ci.yml
migrations/20240903000000_create_books/: up.sql
src/: config.rs  error.rs  main.rs  routes.rs  state.rs
src/domain/: book.rs
src/handlers/: book_handlers.rs  mod.rs
src/infrastructure/: db.rs
src/repo/: mod.rs  sqlx_book_repo.rs
src/service/: book_service.rs  mod.rs
