[package]
name = "rust_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
time = { version = "0.3", features = ["serde", "macros"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "time", "migrate"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "1"
dotenvy = "0.15"
async-trait = "0.1"
http = "1"
anyhow = "1"

[dev-dependencies]
serde_json = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "http1"] }
tower = { version = "0.4", features = ["util"] }
tokio = { version = "1.37", features = ["full"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
